[package]
name = "ce-server"
version = "0.1.0"
authors = ["HoLLy <dario.db@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "0.6"
log = "0.4.11"
pretty_env_logger = "0.4.0"
tokio = {version = "0.3.3", features = ["net", "rt-multi-thread", "io-util"]}
