[package]
name = "ce-server"
version = "0.1.0"
authors = ["HoLLy <dario.db@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "0.6"
log = "0.4.11"
miniz_oxide = "0.4.3"
simplelog = "0.7.6"
tokio = { version = "1.33.0", features = ["net", "rt-multi-thread", "io-util"] }
winapi = { version = "0.3.9", features = [
    "impl-default",
    "memoryapi",
    "processthreadsapi",
    "tlhelp32",
    "winnt",
], optional = true }


[features]
default = ["windows"]
windows = ["winapi"]
trace = []
